fixes for redundant null checks, null dereference

--- a/.classpath
+++ b/.classpath
@@ -1,79 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/ASRAudio.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/JavaLibs.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/Json.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/VHBridge.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/args4j-2.0.23.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/clearnlp-2.0.2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/commons-jexl-1.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/grizzly-http-server-2.3.20.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/guava-14.0.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/hk2-api-2.4.0-b10.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/hk2-locator-2.4.0-b10.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/hk2-utils-2.4.0-b10.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/hppc-0.5.2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/javassist-3.18.1-GA.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/javax.annotation-api-1.2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/javax.inject-2.4.0-b10.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/javax.servlet-api-3.1.0.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/javax.ws.rs-api-2.0.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jaxb-api-2.2.7.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-client-2.17.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-client.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-common.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-container-jdk-http-2.17.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-container-jetty-http-2.17.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-container-servlet-core-2.17.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-container-servlet-core.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-container-servlet.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-grizzly2-1.10.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-guava-2.17.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-media-jaxb.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jersey-server.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-http-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-io-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-security-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-server-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-servlet-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jetty-util-9.3.0.M2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/jregex1.2_01.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/kylm.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/libsvm-3.18.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/lucene-analyzers-common-5.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/lucene-core-5.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/lucene-queryparser-5.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/mallet-deps.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/mallet.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/mcNLU-small.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/opennlp-maxent-3.0.3.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/poi-3.10-FINAL-20140208.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/poi-ooxml-3.10-FINAL-20140208.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/poi-ooxml-schemas-3.10-FINAL-20140208.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/prefuse.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/scxml.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/simplenlg-v4.4.2.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-aop-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-beans-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-context-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-core-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-expression-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-jdbc-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-jms-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-orm-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/spring-tx-3.2.9.RELEASE.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/utilities.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/vhmsg-java.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/xbean.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/lib/xstream-1.4.5.jar"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/resources"/>
-	<classpathentry kind="lib" path="E:/branches/jmNL/jmNL/bin" sourcepath=""/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/ASRAudio.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/JavaLibs.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/Json.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/VHBridge.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/args4j-2.0.23.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/clearnlp-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/commons-jexl-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/grizzly-http-server-2.3.20.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/guava-14.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/hk2-api-2.4.0-b10.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/hk2-locator-2.4.0-b10.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/hk2-utils-2.4.0-b10.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/hppc-0.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/javax.inject-2.4.0-b10.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-client-2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-container-jdk-http-2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-container-jetty-http-2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-container-servlet-core-2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-grizzly2-1.10.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-guava-2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-http-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-io-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-security-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-server-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-servlet-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jetty-util-9.3.0.M2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/jregex1.2_01.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/kylm.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/libsvm-3.18.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/lucene-analyzers-common-5.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/lucene-core-5.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/lucene-queryparser-5.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/mallet-deps.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/mallet.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/mcNLU-small.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/opennlp-maxent-3.0.3.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/poi-3.10-FINAL-20140208.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/poi-ooxml-3.10-FINAL-20140208.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/poi-ooxml-schemas-3.10-FINAL-20140208.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/prefuse.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/scxml.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/simplenlg-v4.4.2.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-aop-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-beans-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-context-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-core-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-expression-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-jdbc-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-jms-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-orm-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/spring-tx-3.2.9.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/utilities.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/vhmsg-java.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/xbean.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/lib/xstream-1.4.5.jar"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/resources"/>
+	<classpathentry kind="lib" path="/Users/kalisch/projects/jmNL/bin" sourcepath=""/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
